# opt-iter

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/source/: bench.cpp  int_gen.cpp  lambda.cpp  line_splitter.cpp  main.cpp  util.hpp
include/opt_iter/: opt_iter.hpp  traits.hpp
test/: CMakeLists.txt  conanfile.py
test/source/: opt_iter_test.cpp
